--- a/style.css
+++ b/style.css
@@ -71,3 +71,22 @@ body {
 .btn .label {
     text-shadow: none;
 }
+
+/* Progress Bar */
+
+.progress-bar-grey {
+    background-color: #767676;
+    background-image: none;
+}
+
+/* Transitions */
+
+.bet-row-enter {
+    opacity: 0.01;
+}
+
+.bet-row-enter.bet-row-enter-active {
+    opacity: 1.0;
+    /* transition: opacity .5s ease-in; */
+    transition: opacity 150ms ease-in;
+}
